--- a/views/event.view.html
+++ b/views/event.view.html
@@ -6,15 +6,15 @@
         <tbody>
             <tr>
                 <td>id</td>
-                <td>{{id}}</td>
+                <td>{{::id}}</td>
             </tr>
             <tr>
                 <td>id_user</td>
-                <td>{{id_user}}</td>
+                <td>{{::id_user}}</td>
             </tr>
             <tr>
                 <td>data-duration</td>
-                <td>{{duration}}</td>
+                <td>{{::duration}}</td>
             </tr>
             <tr>
                 <td>data-description</td>
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <td>data-event_type</td>
-                <td>{{event_type}}</td>
+                <td>{{::event_type}}</td>
             </tr>
         </tbody>
     </table>
